# uredis

./: CMakeLists.txt  LICENSE  README.md
docs/: cluster.md  sentinel.md
examples/: main_cluster.cpp  main_redlock.cpp  main_sentinel_pool.cpp
examples/cluster/: docker-compose.yaml
examples/timeout/: docker-compose.yaml  main_timeout.cpp
include/uredis/: RedisClient.h  RedisClusterClient.h  RedisReflect.h  RedisSentinel.h  RedisSentinelPool.h  RedisTypes.h
src/uredis/: RedisBus.cpp  RedisClient.cpp  RedisClusterClient.cpp  RedisSentinel.cpp  RedisSentinelPool.cpp
